# ioi-circuit-llama

./: .gitignore  README.md  pyproject.toml
configs/: default.toml
reports/: report.md
runs/: aggregate.json  environment.txt  seed_13.json  seed_17.json  seed_23.json
scripts/: plot_results.py  run_assignment.py
src/ioi_circuit/: attribution.py  dataset.py  evaluation.py  utils.py
