[project]
name = "ioi-circuit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["torch>=2.0", "transformers>=4.40", "psutil"]

[project.optional-dependencies]
plot = ["matplotlib"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
